# drawing_analysis

./: .gitignore  README.md  hello.py  pyproject.toml
phase1/: __init__.py  io.py  models.py  pdf2image.py  phase1.py  pipeline.py  preprocess.py  quality.py  visualize.py
phase2/: __init__.py  classify.py  cli.py  embedding.py  engines.py  io.py  models.py  phase2.py  pipeline.py  visualize.py
phase2B/: p2b.py
